[package]
name = "my"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
thiserror = "1.0.47"
log = "0.4.19"
clap = { version = "4.3.11" }
serde = { version = "1.0.166", features = ["derive"]}
serde_json = { version = "1.0.105" }
chrono = { version = "0.4.26", default-features = false, features = ["clock"]}
regex = { version = "1.9.4" }
env_logger = { version = "0.10.0" }
url = { version = "2.4.1", features = ["serde"]}
rand = { version = "0.8.5" }
home = { version = "0.5.5" }