[workspace]

members = [
    "crypto_hash",
    "cipher",
    "utils",
    "encode",
    "rand",
    "group",
]

[package]
name = "my"
version = "0.5.0"
edition = "2021"
rust-version = "1.72"

[[bin]]
name = "my"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
anyhow = { version = "1.0.75" }
thiserror = "1.0.47"
log = "0.4.19"
clap = { version = "4.3.11", features = ["string", "cargo"] }
serde = { version = "1.0.166", features = ["derive"]}
serde_json = { version = "1.0.105" }
chrono = { version = "0.4.26", default-features = false, features = ["clock"]}
regex = { version = "1.9.4" }
env_logger = { version = "0.10.0" }
url = { version = "2.4.1", features = ["serde"]}
rand = { version = "0.8.5" }
home = { version = "0.5.5" }
encode = {path = "./encode"}
cipher = { path = "./cipher"}
crypto_hash = { path = "./crypto_hash" }
zeroize = { version = "1.6.0", optional = true}
rpassword = "7.3.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"

[build-dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"]}

[features]
default = ["zeroize"]
