[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.6.0", optional = true}
utils = { path = "../utils" }

[features]
default = ["sec-zeroize-drop"]

sec-zeroize = ["dep:zeroize", "utils/sec-zeroize"]
sec-zeroize-drop = ["sec-zeroize", "utils/sec-zeroize-drop"]