[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.6.0", optional = true}
utils = { path = "../utils" }
xrand = { package = "rand", version = "0.8.5", default-features = false, features = ["getrandom"]}

[dev-dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.15"

[features]
default = ["sec-zeroize-drop"]

sec-zeroize = ["dep:zeroize", "utils/sec-zeroize"]
sec-zeroize-drop = ["sec-zeroize", "utils/sec-zeroize-drop"]