[package]
name = "cipher"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.6.0", optional = true}
utils = { path = "../utils" }
crypto_hash = { path = "../crypto_hash" }
xrand = { package = "rand", version = "0.8.5", default-features = false, features = ["getrandom"]}
rand = {path = "../rand"}
num-bigint = {version = "0.4.3", features = ["rand", "serde"]}
num-traits = "0.2.15"
num-integer = "0.1.45"
anyhow = "1.0.75"
serde = { version = "1.0.195", features = ["std", "derive"], default-features = false}

[dev-dependencies]
encode = {path = "../encode"}
argon2 = { version = "0.5.2"}

[features]
default = ["sec-zeroize-drop"]

sec-zeroize = ["dep:zeroize", "utils/sec-zeroize"]
sec-zeroize-drop = ["sec-zeroize", "utils/sec-zeroize-drop"]
