[package]
name = "crypto_hash"
version = "0.2.0"
edition = "2021"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.6.0", optional = true}
num-bigint = { version = "0.4.4" }
utils = { path = "../utils", optional = true}
num_cpus = "1.16.0"
crossbeam = "0.8.4"
rayon = "1.8.1"

[dev-dependencies]
num-bigint = {version = "0.4.4", features = ["rand"]}
num-traits = "0.2.15"

[features]
default = ["sec-zeroize-drop"]

sec-zeroize = ["dep:zeroize", "utils/sec-zeroize"]
sec-zeroize-drop = ["sec-zeroize", "utils/sec-zeroize-drop"]