[package]
name = "group"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4.2", default-features = false}
ark-ec = { version = "0.4.2", default-features = false}
ark-serialize = { version = "0.4.2", default-features = false, features = ["derive"]}
derivative = { version = "2.2.0"}
num-bigint = "0.4.3"
num-traits = "0.2.15"

