[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.6.0", optional = true}

[features]
default = ["sec-zeroize-drop"]

sec-zeroize = ["dep:zeroize"]
sec-zeroize-drop = ["sec-zeroize"]
